binary.output
Terminals unused in grammar

   SDQUOTE
   SQUOTE


Stato 21 1 riduzione/riduzione
Stato 37 1 conflitti shift/riduzione


Grammatica

    0 $accept: program "end of file"

    1 program: chunk

    2 chunk: stats
    3      | stats laststatment optional_semicolon

    4 stats: %empty
    5      | stats stat optional_semicolon

    6 optional_semicolon: %empty
    7                   | SEMICOLON

    8 block: chunk

    9 laststatment: RETURN oexplist
   10             | BREAK

   11 stat: varlist EQUAL explist
   12     | functioncall
   13     | DO block END1
   14     | WHILE exp DO block END1
   15     | REPEAT block UNTIL exp
   16     | IF exp THEN block elseif_statement else_statement END1
   17     | FOR NAME EQUAL exp COMMA exp oexpcomma DO block END1
   18     | FOR namelist IN explist DO block END1
   19     | FUNCTION funcname funcbody
   20     | LOCAL FUNCTION NAME funcbody
   21     | LOCAL namelist
   22     | LOCAL namelist EQUAL explist

   23 oexpcomma: %empty
   24          | COMMA exp

   25 elseif_statement: %empty
   26                 | elseif_statement ELSEIF exp THEN block

   27 else_statement: %empty
   28               | ELSE block

   29 funcname: NAME
   30         | funcname POINT NAME ofuncname

   31 ofuncname: %empty
   32          | COLON NAME

   33 varlist: var
   34        | varlist COMMA var

   35 var: NAME
   36    | prefixexp OSBRACKET exp CSBRACKET
   37    | prefixexp POINT NAME

   38 namelist: NAME
   39         | namelist COMMA NAME

   40 explist: exp
   41        | explist COMMA exp

   42 oexplist: %empty
   43         | explist

   44 exp: NIL
   45    | FALSE
   46    | TRUE
   47    | NUMBER
   48    | STRING
   49    | THREEPOINT
   50    | function
   51    | prefixexp
   52    | tableconstructor
   53    | exp MINUS exp
   54    | exp PLUS exp
   55    | exp ASTERISK exp
   56    | exp FSLASH exp
   57    | exp ARCH exp
   58    | exp TWOPOINT exp
   59    | exp PERCENTAGE exp
   60    | exp LOWER exp
   61    | exp ELOWER exp
   62    | exp GREATER exp
   63    | exp EGREATER exp
   64    | exp DEQUAL exp
   65    | exp ETILDA exp
   66    | exp AND exp
   67    | exp OR exp
   68    | MINUS exp
   69    | NOT exp
   70    | HASH exp

   71 prefixexp: var
   72          | functioncall
   73          | OPARENTHESIS exp CPARENTHESIS

   74 functioncall: prefixexp args
   75             | prefixexp COLON NAME args

   76 args: OPARENTHESIS oexplist CPARENTHESIS
   77     | tableconstructor
   78     | STRING

   79 function: FUNCTION funcbody

   80 funcbody: OPARENTHESIS opt_parlist CPARENTHESIS block END1

   81 parlist: namelist oparlist
   82        | THREEPOINT

   83 oparlist: %empty
   84         | COMMA THREEPOINT

   85 opt_parlist: %empty
   86            | parlist

   87 tableconstructor: OBRACKET ofieldlist CBRACKET

   88 fieldlist: field
   89          | fieldlist fieldsep field

   90 ofieldlist: %empty
   91           | fieldlist ofieldsep

   92 field: OSBRACKET exp CSBRACKET EQUAL exp
   93      | NAME EQUAL exp
   94      | exp

   95 fieldsep: COMMA
   96         | SEMICOLON

   97 ofieldsep: %empty
   98          | fieldsep


Simboli terminali e regole in cui appaiono

"end of file" (0) 0
error (256)
SEMICOLON (258) 7 96
NAME (259) 17 20 29 30 32 35 37 38 39 75 93
BREAK (260) 10
RETURN (261) 9
EQUAL (262) 11 17 22 92 93
COMMA (263) 17 24 34 39 41 84 95
OSBRACKET (264) 36 92
CSBRACKET (265) 36 92
POINT (266) 30 37
OPARENTHESIS (267) 73 76 80
CPARENTHESIS (268) 73 76 80
COLON (269) 32 75
STRING (270) 48 78
OBRACKET (271) 87
CBRACKET (272) 87
DO (273) 13 14 17 18
END1 (274) 13 14 16 17 18 80
WHILE (275) 14
REPEAT (276) 15
UNTIL (277) 15
IF (278) 16
THEN (279) 16 26
ELSEIF (280) 26
ELSE (281) 28
FOR (282) 17 18
IN (283) 18
FUNCTION (284) 19 20 79
LOCAL (285) 20 21 22
THREEPOINT (286) 49 82 84
PLUS (287) 54
MINUS (288) 53 68
ASTERISK (289) 55
FSLASH (290) 56
HASH (291) 70
ARCH (292) 57
PERCENTAGE (293) 59
LOWER (294) 60
GREATER (295) 62
NOT (296) 69
AND (297) 66
OR (298) 67
ELOWER (299) 61
EGREATER (300) 63
ETILDA (301) 65
DEQUAL (302) 64
TWOPOINT (303) 58
SDQUOTE (304)
SQUOTE (305)
NIL (306) 44
FALSE (307) 45
TRUE (308) 46
NUMBER (309) 47


Simboli nonterminali e regole in cui appaiono

$accept (55)
    nel primo membro: 0
program (56)
    nel primo membro: 1, nel secondo membro: 0
chunk (57)
    nel primo membro: 2 3, nel secondo membro: 1 8
stats (58)
    nel primo membro: 4 5, nel secondo membro: 2 3 5
optional_semicolon (59)
    nel primo membro: 6 7, nel secondo membro: 3 5
block (60)
    nel primo membro: 8, nel secondo membro: 13 14 15 16 17 18 26 28
    80
laststatment (61)
    nel primo membro: 9 10, nel secondo membro: 3
stat (62)
    nel primo membro: 11 12 13 14 15 16 17 18 19 20 21 22, nel secondo membro:
    5
oexpcomma (63)
    nel primo membro: 23 24, nel secondo membro: 17
elseif_statement (64)
    nel primo membro: 25 26, nel secondo membro: 16 26
else_statement (65)
    nel primo membro: 27 28, nel secondo membro: 16
funcname (66)
    nel primo membro: 29 30, nel secondo membro: 19 30
ofuncname (67)
    nel primo membro: 31 32, nel secondo membro: 30
varlist (68)
    nel primo membro: 33 34, nel secondo membro: 11 34
var (69)
    nel primo membro: 35 36 37, nel secondo membro: 33 34 71
namelist (70)
    nel primo membro: 38 39, nel secondo membro: 18 21 22 39 81
explist (71)
    nel primo membro: 40 41, nel secondo membro: 11 18 22 41 43
oexplist (72)
    nel primo membro: 42 43, nel secondo membro: 9 76
exp (73)
    nel primo membro: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70, nel secondo membro: 14 15
    16 17 24 26 36 40 41 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 73 92 93 94
prefixexp (74)
    nel primo membro: 71 72 73, nel secondo membro: 36 37 51 74 75
functioncall (75)
    nel primo membro: 74 75, nel secondo membro: 12 72
args (76)
    nel primo membro: 76 77 78, nel secondo membro: 74 75
function (77)
    nel primo membro: 79, nel secondo membro: 50
funcbody (78)
    nel primo membro: 80, nel secondo membro: 19 20 79
parlist (79)
    nel primo membro: 81 82, nel secondo membro: 86
oparlist (80)
    nel primo membro: 83 84, nel secondo membro: 81
opt_parlist (81)
    nel primo membro: 85 86, nel secondo membro: 80
tableconstructor (82)
    nel primo membro: 87, nel secondo membro: 52 77
fieldlist (83)
    nel primo membro: 88 89, nel secondo membro: 89 91
ofieldlist (84)
    nel primo membro: 90 91, nel secondo membro: 87
field (85)
    nel primo membro: 92 93 94, nel secondo membro: 88 89
fieldsep (86)
    nel primo membro: 95 96, nel secondo membro: 89 98
ofieldsep (87)
    nel primo membro: 97 98, nel secondo membro: 91


Stato 0

    0 $accept: . program "end of file"

    $default  riduzione con la regola 4 (stats)

    program  prosecuzione allo stato 1
    chunk    prosecuzione allo stato 2
    stats    prosecuzione allo stato 3


Stato 1

    0 $accept: program . "end of file"

    "end of file"  shift e prosecuzione allo stato 4


Stato 2

    1 program: chunk .

    $default  riduzione con la regola 1 (program)


Stato 3

    2 chunk: stats .
    3      | stats . laststatment optional_semicolon
    5 stats: stats . stat optional_semicolon

    NAME          shift e prosecuzione allo stato 5
    BREAK         shift e prosecuzione allo stato 6
    RETURN        shift e prosecuzione allo stato 7
    OPARENTHESIS  shift e prosecuzione allo stato 8
    DO            shift e prosecuzione allo stato 9
    WHILE         shift e prosecuzione allo stato 10
    REPEAT        shift e prosecuzione allo stato 11
    IF            shift e prosecuzione allo stato 12
    FOR           shift e prosecuzione allo stato 13
    FUNCTION      shift e prosecuzione allo stato 14
    LOCAL         shift e prosecuzione allo stato 15

    $default  riduzione con la regola 2 (chunk)

    laststatment  prosecuzione allo stato 16
    stat          prosecuzione allo stato 17
    varlist       prosecuzione allo stato 18
    var           prosecuzione allo stato 19
    prefixexp     prosecuzione allo stato 20
    functioncall  prosecuzione allo stato 21


Stato 4

    0 $accept: program "end of file" .

    $default  accetta


Stato 5

   35 var: NAME .

    $default  riduzione con la regola 35 (var)


Stato 6

   10 laststatment: BREAK .

    $default  riduzione con la regola 10 (laststatment)


Stato 7

    9 laststatment: RETURN . oexplist

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    $default  riduzione con la regola 42 (oexplist)

    var               prosecuzione allo stato 33
    explist           prosecuzione allo stato 34
    oexplist          prosecuzione allo stato 35
    exp               prosecuzione allo stato 36
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 8

   73 prefixexp: OPARENTHESIS . exp CPARENTHESIS

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 41
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 9

   13 stat: DO . block END1

    $default  riduzione con la regola 4 (stats)

    chunk  prosecuzione allo stato 42
    stats  prosecuzione allo stato 3
    block  prosecuzione allo stato 43


Stato 10

   14 stat: WHILE . exp DO block END1

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 44
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 11

   15 stat: REPEAT . block UNTIL exp

    $default  riduzione con la regola 4 (stats)

    chunk  prosecuzione allo stato 42
    stats  prosecuzione allo stato 3
    block  prosecuzione allo stato 45


Stato 12

   16 stat: IF . exp THEN block elseif_statement else_statement END1

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 46
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 13

   17 stat: FOR . NAME EQUAL exp COMMA exp oexpcomma DO block END1
   18     | FOR . namelist IN explist DO block END1

    NAME  shift e prosecuzione allo stato 47

    namelist  prosecuzione allo stato 48


Stato 14

   19 stat: FUNCTION . funcname funcbody

    NAME  shift e prosecuzione allo stato 49

    funcname  prosecuzione allo stato 50


Stato 15

   20 stat: LOCAL . FUNCTION NAME funcbody
   21     | LOCAL . namelist
   22     | LOCAL . namelist EQUAL explist

    NAME      shift e prosecuzione allo stato 51
    FUNCTION  shift e prosecuzione allo stato 52

    namelist  prosecuzione allo stato 53


Stato 16

    3 chunk: stats laststatment . optional_semicolon

    SEMICOLON  shift e prosecuzione allo stato 54

    $default  riduzione con la regola 6 (optional_semicolon)

    optional_semicolon  prosecuzione allo stato 55


Stato 17

    5 stats: stats stat . optional_semicolon

    SEMICOLON  shift e prosecuzione allo stato 54

    $default  riduzione con la regola 6 (optional_semicolon)

    optional_semicolon  prosecuzione allo stato 56


Stato 18

   11 stat: varlist . EQUAL explist
   34 varlist: varlist . COMMA var

    EQUAL  shift e prosecuzione allo stato 57
    COMMA  shift e prosecuzione allo stato 58


Stato 19

   33 varlist: var .
   71 prefixexp: var .

    EQUAL     riduzione con la regola 33 (varlist)
    COMMA     riduzione con la regola 33 (varlist)
    $default  riduzione con la regola 71 (prefixexp)


Stato 20

   36 var: prefixexp . OSBRACKET exp CSBRACKET
   37    | prefixexp . POINT NAME
   74 functioncall: prefixexp . args
   75             | prefixexp . COLON NAME args

    OSBRACKET     shift e prosecuzione allo stato 59
    POINT         shift e prosecuzione allo stato 60
    OPARENTHESIS  shift e prosecuzione allo stato 61
    COLON         shift e prosecuzione allo stato 62
    STRING        shift e prosecuzione allo stato 63
    OBRACKET      shift e prosecuzione allo stato 23

    args              prosecuzione allo stato 64
    tableconstructor  prosecuzione allo stato 65


Stato 21

   12 stat: functioncall .
   72 prefixexp: functioncall .

    OSBRACKET     riduzione con la regola 72 (prefixexp)
    POINT         riduzione con la regola 72 (prefixexp)
    OPARENTHESIS  riduzione con la regola 12 (stat)
    OPARENTHESIS  [riduzione con la regola 72 (prefixexp)]
    COLON         riduzione con la regola 72 (prefixexp)
    STRING        riduzione con la regola 72 (prefixexp)
    OBRACKET      riduzione con la regola 72 (prefixexp)
    $default      riduzione con la regola 12 (stat)


Stato 22

   48 exp: STRING .

    $default  riduzione con la regola 48 (exp)


Stato 23

   87 tableconstructor: OBRACKET . ofieldlist CBRACKET

    NAME          shift e prosecuzione allo stato 66
    OSBRACKET     shift e prosecuzione allo stato 67
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    $default  riduzione con la regola 90 (ofieldlist)

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 68
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40
    fieldlist         prosecuzione allo stato 69
    ofieldlist        prosecuzione allo stato 70
    field             prosecuzione allo stato 71


Stato 24

   79 function: FUNCTION . funcbody

    OPARENTHESIS  shift e prosecuzione allo stato 72

    funcbody  prosecuzione allo stato 73


Stato 25

   49 exp: THREEPOINT .

    $default  riduzione con la regola 49 (exp)


Stato 26

   68 exp: MINUS . exp

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 74
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 27

   70 exp: HASH . exp

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32

    var               prosecuzione allo stato 33
    exp               prosecuzione allo stato 75
    prefixexp         prosecuzione allo stato 37
    functioncall      prosecuzione allo stato 38
    function          prosecuzione allo stato 39
    tableconstructor  prosecuzione allo stato 40


Stato 28

   69 exp: NOT . exp

    NAME          shift e prosecuzione allo stato 5
    OPARENTHESIS  shift e prosecuzione allo stato 8
    STRING        shift e prosecuzione allo stato 22
    OBRACKET      shift e prosecuzione allo stato 23
    FUNCTION      shift e prosecuzione allo stato 24
    THREEPOINT    shift e prosecuzione allo stato 25
    MINUS         shift e prosecuzione allo stato 26
    HASH          shift e prosecuzione allo stato 27
    NOT           shift e prosecuzione allo stato 28
    NIL           shift e prosecuzione allo stato 29
    FALSE         shift e prosecuzione allo stato 30
    TRUE          shift e prosecuzione allo stato 31
    NUMBER        shift e prosecuzione allo stato 32
